# serializer version: 1
# name: test_hvac_device_state[tests/fixtures/smart-lock-locked.yaml]
  tuple(
    'locked',
    ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Front Door Lock',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LockEntityFeature: 0>,
    }),
  )
# ---
# name: test_hvac_device_state[tests/fixtures/smart-lock-unlocked.yaml]
  tuple(
    'unlocked',
    ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Front Door Lock',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LockEntityFeature: 0>,
    }),
  )
# ---
